--- a/app/styles/components/map/item-list.scss
+++ b/app/styles/components/map/item-list.scss
@@ -148,7 +148,7 @@
 }
 
 .selectPolygon {
-  display: flex;
+  display: inline-block;
   flex-direction: column;
   width: 45%;
   margin-right: 10px;
